--- a/src/components/organisms/styles/Header.module.scss
+++ b/src/components/organisms/styles/Header.module.scss
@@ -7,8 +7,11 @@
 }
 .container {
   width: 100%;
-  max-width: 1400px;
+  max-width: 1800px;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin: 0 auto;
 }
 
