--- a/src/components/organisms/styles/Hero.module.scss
+++ b/src/components/organisms/styles/Hero.module.scss
@@ -2,8 +2,6 @@
   width: 100%;
   height: 200px;
   padding: 20px 20px;
-  box-sizing: border-box;
-  border: 1px solid white;
 }
 .container {
   width: 100%;
@@ -12,12 +10,15 @@
 }
 .text {
   font-size: 20px;
-  line-height: 24px;
+  line-height: 27px;
 }
 .tagFlexBox {
   width: 100%;
+  max-width: 1800px;
+  margin: 0 auto;
+  height: 50px;
   display: flex;
-  justify-content: space-around;
+  align-items: center;
 }
 @media screen and (max-width: 1280px) {
 }
